Fix header overflow problem; improve its hover style.

--- a/site/_includes/styles/_color-scheme.scss
+++ b/site/_includes/styles/_color-scheme.scss
@@ -23,6 +23,8 @@
    --h1-fg: var(--gray-1);
    --h2-fg: var(--gray-2);
 
+   --title-hover-bar: var(--underline);
+
    --blockquote-border: var(--blue-1);
 
    --aside-bg: var(--gray-5);
@@ -66,6 +68,8 @@
 
    --h1-fg: var(--gray-5);
    --h2-fg: var(--gray-4);
+
+   --title-hover-bar: var(--hover-underline);
 
    --blockquote-border: var(--blue-3);
 
